# rust-ai-polyglot

./: .env.example  .gitignore  Cargo.toml  LICENSE (MIT)  README.md
.github/workflows/: ci.yml  rust.yml
examples/: compare.sh  simple_chat.sh
llm_core/: Cargo.toml
llm_core/src/: lib.rs  types.rs
llm_core/src/providers/: gemini.rs  hf.rs  mod.rs  openai.rs  openrouter.rs  replicate.rs
polyglot/: Cargo.toml
polyglot/src/: main.rs
